added header section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 03</title>
+    <!-- Google font CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+    <!-- DaisyUI CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/0f448948d9.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+        .font-manrope{
+            font-family: "Manrope", sans-serif;
+        }
+    </style>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-<body>
-    <header></header>
+
+<body class="font-manrope">
+    <header class="container mx-auto">
+        <!-- navbar -->
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <a class="btn btn-ghost text-3xl font-bold"
+              ><i
+                class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-1 -rotate-45"
+              ></i>
+              Rinterio</a
+            >
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 font-bold text-[#737373]">
+              <li><a>Home</a></li>
+              <li><a>Services</a></li>
+              <li><a>Portfolio</a></li>
+              <li><a>Blogs</a></li>
+              <li><a>Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="flex-1 justify-end space-x-2">
+            <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-magnifying-glass"></i>
+            <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-cart-shopping"></i>
+            <a
+              class="btn hidden bg-[#ABEF5F] text-black rounded-3xl md:inline-flex justify-center items-center"
+              >Book Consult
+              <i
+                class="fa-solid fa-arrow-right bg-black text-white rounded-full p-2 -rotate-45"
+              ></i>
+            </a>
+            <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-bars lg:hidden"></i>
+          </div>
+        </div>
+         <!-- banner -->
+      <div class="flex flex-col justify-center items-center p-14 space-y-4">
+        <div>
+          <img src="./assets/banner.png" alt="" />
+        </div>
+        <div class="text-center space-y-4 md:space-y-6 lg:space-y-8">
+          <h1 class="font-bold text-3xl lg:text-6xl text-title  md:text-4xl">
+            A barn house of this design has a striking appearance
+          </h1>
+          <p class="text-subtitle">
+            A barn house design aims to create a cozy, functional living space, blending traditional agricultural aesthetics with modern conveniences.
+          </p>
+          <button class="btn bg-lime-200 text-xl rounded-3xl">
+            View Details<i
+              class="fa-solid fa-arrow-right secondary rounded-full p-1 -rotate-45 bg-[#ABEF5F]"
+            ></i>
+          </button>
+        </div>
+      </div>
     <main></main>
 
     <footer></footer>
 </body>
+
 </html>
