added design section

--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Font awesome -->
-    <script
-      src="https://kit.fontawesome.com/0f448948d9.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/0f448948d9.js" crossorigin="anonymous"></script>
     <style>
-        .font-manrope{
+        .font-manrope {
             font-family: "Manrope", sans-serif;
         }
     </style>
@@ -39,60 +36,103 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
-        <!-- navbar -->
         <div class="navbar bg-base-100">
-          <div class="flex-1">
-            <a class="btn btn-ghost text-3xl font-bold"
-              ><i
-                class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-1 -rotate-45"
-              ></i>
-              Rinterio</a
-            >
-          </div>
-          <div class="navbar-center hidden lg:flex">
-            <ul class="menu menu-horizontal px-1 font-bold text-[#737373]">
-              <li><a>Home</a></li>
-              <li><a>Services</a></li>
-              <li><a>Portfolio</a></li>
-              <li><a>Blogs</a></li>
-              <li><a>Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="flex-1 justify-end space-x-2">
-            <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-magnifying-glass"></i>
-            <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-cart-shopping"></i>
-            <a
-              class="btn hidden bg-[#ABEF5F] text-black rounded-3xl md:inline-flex justify-center items-center"
-              >Book Consult
-              <i
-                class="fa-solid fa-arrow-right bg-black text-white rounded-full p-2 -rotate-45"
-              ></i>
-            </a>
-            <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-bars lg:hidden"></i>
-          </div>
+            <div class="flex-1">
+                <a class="btn btn-ghost text-3xl font-bold"><i
+                        class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-1 -rotate-45"></i>
+                    Rinterio</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 font-bold text-[#737373]">
+                    <li><a>Home</a></li>
+                    <li><a>Services</a></li>
+                    <li><a>Portfolio</a></li>
+                    <li><a>Blogs</a></li>
+                    <li><a>Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="flex-1 justify-end space-x-2">
+                <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-magnifying-glass"></i>
+                <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-cart-shopping"></i>
+                <a class="btn hidden bg-[#ABEF5F] text-black rounded-3xl md:inline-flex justify-center items-center">Book
+                    Consult
+                    <i class="fa-solid fa-arrow-right bg-black text-white rounded-full p-2 -rotate-45"></i>
+                </a>
+                <i class="fa-solid bg-white rounded-full shadow-md p-2 fa-bars lg:hidden"></i>
+            </div>
         </div>
-         <!-- banner -->
-      <div class="flex flex-col justify-center items-center p-14 space-y-4">
-        <div>
-          <img src="./assets/banner.png" alt="" />
+        <div class="flex flex-col justify-center items-center p-14 space-y-4">
+            <div>
+                <img src="./images/banner.png" alt="" />
+            </div>
+            <div class="text-center space-y-4 md:space-y-6 lg:space-y-8">
+                <h1 class="font-bold text-3xl lg:text-6xl text-title  md:text-4xl">
+                    A barn house of this design has a striking appearance
+                </h1>
+                <p class="text-subtitle">
+                    A barn house design aims to create a cozy, functional living space, blending traditional
+                    agricultural aesthetics with modern conveniences.
+                </p>
+                <button class="btn bg-lime-200 text-xl rounded-3xl">
+                    View Details<i
+                        class="fa-solid fa-arrow-right secondary rounded-full p-1 -rotate-45 bg-[#ABEF5F]"></i>
+                </button>
+            </div>
         </div>
-        <div class="text-center space-y-4 md:space-y-6 lg:space-y-8">
-          <h1 class="font-bold text-3xl lg:text-6xl text-title  md:text-4xl">
-            A barn house of this design has a striking appearance
-          </h1>
-          <p class="text-subtitle">
-            A barn house design aims to create a cozy, functional living space, blending traditional agricultural aesthetics with modern conveniences.
-          </p>
-          <button class="btn bg-lime-200 text-xl rounded-3xl">
-            View Details<i
-              class="fa-solid fa-arrow-right secondary rounded-full p-1 -rotate-45 bg-[#ABEF5F]"
-            ></i>
-          </button>
-        </div>
-      </div>
-    <main></main>
+        <main>
+            <section>
+                <div class="bg-[#f4f4f4] pt-10">
+                    <div class="lg:text-left text-center ml-10">
+                        <img class="hidden lg:block" src="./images/Vector.png" alt="" />
+                        <button class="btn lg:ml-20 bg-white rounded-full mt-4 mb-4">
+                            <i class="fa-solid fa-arrow-right"></i>About Us
+                        </button>
+                    </div>
+                </div>
+                <div
+                    class="bg-[#f4f4f4] w-full grid grid-cols-1 lg:grid-cols-2 lg:space-x-8 px-8 md:px-16 lg:px-28 pb-4">
+                    <div class="flex justify-center items-center">
+                        <div class="space-y-3 md:space-y-6 lg:space-y-4">
+                            <h2 class="font-bold text-xl md:text-3xl lg:text-5xl">
+                                We design thoughtful, liveable spaces
+                            </h2>
+                            <p>
+                                We create well-designed, functional spaces that are comfortable, aesthetically pleasing,
+                                and tailored to individual lifestyles.
+                            </p>
+                            <div class="space-y-10 pb-4">
+                                <div class="flex w-full lg:w-3/4 px-4 bg-white rounded-xl py-4 space-x-5 items-center">
+                                    <div>
+                                        <img src="./images/commercial.png" alt="" />
+                                    </div>
+                                    <div>
+                                        <h4 class="font-bold lg:text-xl">Commercial</h4>
+                                        <p class="text-subtitle">
+                                            Modern, versatile spaces tailored for business success.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="flex w-full lg:w-3/4 pl-4 bg-white rounded-xl py-5 space-x-5 items-center">
+                                    <div>
+                                        <img src="./images/residential.png" alt="" />
+                                    </div>
+                                    <div>
+                                        <h4 class="font-bold lg:text-xl">Residential</h4>
+                                        <p class="text-subtitle">
+                                            Comfortable, personalized homes designed for everyday living.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="my-3 md:mt-6 flex justify-center items-center">
+                        <img src="./images/Rectangle.png" alt="" />
+                    </div></div>
+            </section>
+        </main>
 
-    <footer></footer>
+        <footer></footer>
 </body>
 
 </html>
