--- a/index.html
+++ b/index.html
@@ -130,6 +130,55 @@
                         <img src="./images/Rectangle.png" alt="" />
                     </div></div>
             </section>
+
+            <!-- works process -->
+      <section class="bg-[#f4f4f4] w-full px-5 lg:px-28 py-8 md:py-16 lg:py-24">
+        <div class="container mx-auto">
+          <div class="text-center space-y-5">
+            <button class="btn rounded-full bg-white font-bold">
+              <i class="fa-solid fa-arrow-right"></i>How we works
+            </button>
+            <h2 class="font-bold text-xl text-title md:text-2xl lg:text-4xl">
+              Our Works Process
+            </h2>
+            <p class="text-subtitle">
+                Work processing involves organizing, executing tasks, and managing workflow efficiently.
+            </p>
+          </div>
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 my-5 gap-6"
+          >
+            <div class="bg-[#E7C1D3] rounded-xl p-4">
+              <img src="./images/concept.png" alt="" />
+              <h4 class="font-bold text-title">Concept</h4>
+              <p class="text-subtitle">
+                A design concept is a foundational idea that shapes a project's aesthetics and functionality.
+              </p>
+            </div>
+            <div class="bg-[#EFDA6E] rounded-xl p-4">
+              <img src="./images/flow-chart.png" alt="" />
+              <h4 class="font-bold text-title">Design Process</h4>
+              <p class="text-subtitle">
+                The design process involves research, brainstorming, planning, creating, and refining ideas.
+              </p>
+            </div>
+            <div class="bg-[#A4DAC3] rounded-xl p-4">
+              <img src="./images/vision.png" alt="" />
+              <h4 class="font-bold text-title">Supervision</h4>
+              <p class="text-subtitle">
+                Supervision involves overseeing, guiding, and ensuring tasks are completed effectively.
+              </p>
+            </div>
+            <div class="bg-[#77AAEA] rounded-xl p-4">
+              <img src="./images/budget-planning.png" alt="" />
+              <h4 class="font-bold text-title">Budget Planning</h4>
+              <p class="text-subtitle">
+                Budget planning involves allocating funds, tracking expenses, and forecasting financial needs.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
         </main>
 
         <footer></footer>
