added portfolio section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,102 @@
           </div>
         </div>
       </section>
+      
+      <section class="my-10 container mx-auto">
+        <div class="text-center space-y-5">
+          <button class="font-bold rounded-full btn">
+            <i class="fa-solid fa-arrow-right"></i>Explore our Latest works
+          </button>
+          <h2 class="font-bold text-xl text-title md:text-2xl lg:text-4xl">
+            Our Latest Portfolio
+          </h2>
+          <p class="text-subtitle">
+            Our latest portfolio showcases innovative designs, diverse projects, and our commitment to excellence and creative solutions.
+          </p>
+        </div>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 p-4 md:p-5 mt-10"
+        >
+          <!-- card 1 -->
+          <div
+            class="border flex flex-col space-y-4 md:flex-row justify-center items-center space-x-6 md:col-span-2 lg:col-span-3 p-4 rounded-xl"
+          >
+            <div>
+              <img class="w-full" src="./images/img1.png" alt="" />
+            </div>
+            <div class="space-y-2">
+              <h4 class="font-bold text-title">Commercial</h4>
+              <p class="text-subtitle">
+                Commercial design emphasizes functionality, branding, client interaction, and efficient use of space for business success.
+              </p>
+              <ul>
+                <li>
+                  <a
+                    >View Details<i
+                      class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-1 -rotate-45 ml-1"
+                    ></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div
+            class="border flex justify-center items-center space-x-6 md:col-span-1 lg:col-span-1 p-4 rounded-xl"
+          >
+            <div class="w-full">
+              <img class="w-full" src="./images/img2.png" alt="" />
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div
+            class="border flex justify-center items-center space-x-6 p-4 md:col-span-1 lg:col-span-1 rounded-xl"
+          >
+            <div class="w-full">
+              <img class="w-full" src="./images/img3.png" alt="" />
+            </div>
+          </div>
+          <!-- card-4 -->
+          <div
+            class="border flex flex-col md:flex-row space-y-4 justify-center items-center space-x-6 md:col-span-2 lg:col-span-2 p-2 rounded-xl"
+          >
+            <div class="w-full">
+              <img class="w-full" src="./images/img4.png" alt="" />
+            </div>
+            <div class="space-y-2">
+              <h4 class="font-bold text-title">Commercial</h4>
+              <p class="text-subtitle">
+                Commercial design aims to enhance business operations, attract clients, and optimize workspace for productivity and branding.
+              </p>
+              <ul>
+                <li>
+                  <a
+                    >View Details<i
+                      class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-1 -rotate-45 ml-1"
+                    ></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- card-5 -->
+          <div
+            class="border flex justify-center items-center md:col-span-1 lg:col-span-1 space-x-6 p-4 rounded-xl"
+          >
+            <div class="w-full">
+              <img class="w-full" src="./images/img5.png" alt="" />
+            </div>
+          </div>
+          <!-- card-6 -->
+          <div
+            class="border flex justify-center items-center p-4 space-x-6 md:col-span-1 lg:col-span-1 rounded-xl lg:hidden"
+          >
+            <div class="w-full">
+              <img class="w-full" src="./images/img3.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
         </main>
 
         <footer></footer>
