added footer section

--- a/index.html
+++ b/index.html
@@ -331,8 +331,30 @@
         </div>
       </section>
         </main>
-
-        <footer></footer>
+        <footer class="footer footer-center bg-[#1C1C1C] text-neutral-content p-10">
+            <aside>
+              <a class="btn btn-ghost text-3xl font-bold"
+              ><i
+                class="fa-solid fa-arrow-right bg-[#ABEF5F] text-black rounded-full p-1 -rotate-45"
+              ></i>
+              Rinterio</a>
+              <p class="text-[#737373]">Discover the ideal blend of rustic allure and modern sophistication with our distinctive design method, where tradition and innovation converge.</p>
+            </aside>
+            <nav class="grid md:grid-flow-col gap-10">
+              <a class="link link-hover">Home</a>
+              <a class="link link-hover">Services</a>
+              <a class="link link-hover">Portfolio</a>
+              <a class="link link-hover">Blogs</a>
+              <a class="link link-hover">Contact Us</a>
+            </nav>
+            <a
+            class="btn bg-[#ABEF5F] text-black rounded-3xl inline-flex justify-center items-center"
+            >Book Consult
+            <i
+              class="fa-solid fa-arrow-right bg-black text-white rounded-full p-2 -rotate-45"
+            ></i>
+          </a>
+          </footer>
 </body>
 
 </html>
